--- a/rock_paper_scissors_web/index.html
+++ b/rock_paper_scissors_web/index.html
@@ -18,15 +18,33 @@
 
         <hr>
 
-        <p id="player_choice">Player&nbsp;</p>
-        <p id="computer_choice">Computer</p>
-        <p id="round_result">&nbsp;Result</p>
+        <p id="player_choice">&nbsp;</p>
+        <p id="computer_choice">&nbsp;</p>
+        <p id="round_result">&nbsp;</p>
 
-        <button class="btn btn-outline-secondary">Rock</button>
-        <button class="btn btn-outline-primary">Paper</button>
-        <button class="btn btn-outline-danger">Scissors</button>
+        <hr>
+
+        <button class="btn btn-outline-secondary" onclick="choose('Rock')">Rock</button>
+        <button class="btn btn-outline-primary" onclick="choose('Paper')">Paper</button>
+        <button class="btn btn-outline-danger" onclick="choose('Scissors')">Scissors</button>
 
     </div>
 </body>
+
+<script>
+    function choose(x) {
+
+        fetch("/play?c=" + x)
+            .then(response => response.json())
+            .then(data => {
+                console.log(data)
+                for (const [key, value] of Object.entries(data)) {
+                    console.log(key, value)
+                    document.getElementById(key).innerHTML = value;
+                }
+            });
+
+    }
+</script>
 
 </html>
